# 2d-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  P0_Welcome_To_Colaboratory.ipynb  P4_w2_obstacle_detection_based_on_disparity_maps.ipynb  README.md  build.bat  build.sh  generate_seed.py  main.cpp  run.sh
core/: CMakeLists.txt  demo.cpp  entity.cpp  game.cpp
core/entity/: CMakeLists.txt  animation.cpp  collider.cpp  collision_manager.cpp  drawable.cpp  enemy.cpp  entity.cpp  item.cpp  player.cpp  weapon.cpp
core/entity/include/entity/: animation.h  collision_manager.h  drawable.h  enemy.h  entities.h  entity.h  player.h  properties.h
core/entity/include/items/: collider.h  item.h  items.h  weapon.h
core/map/: CMakeLists.txt  map.cpp  map_graph.cpp  map_graph.h  seed_generator.cpp  tile.cpp  wall.cpp
core/map/include/gamemap/: map.h  procedural_generator.h  seed_generator.h  tile.h  wall.h
core/states/: CMakeLists.txt  end_state.cpp  menu_state.cpp  play_state.cpp  selection_state.cpp  state.cpp
core/states/include/state/: menu_state.h  play_state.h  state.h  states.h
core/ui/: CMakeLists.txt  healthbar.cpp  word.cpp
core/ui/include/gameui/: gameui.h  healthbar.h  icon_properties.h  word.h
engine/: CMakeLists.txt  engine.cpp  entity.cpp  entity.h  graphics.h  properties.h  temp.cpp  utils.h
engine/fsm/: machine.h
engine/input/: CMakeLists.txt  abstract_keyboard_input.h  controller_input.cpp  keyboard_input.cpp  keyboard_input.h
engine/input/include/input/: controller_input.h  input_properties.h  keyboard_input.h
engine/logging/: CMakeLists.txt  log.cpp
engine/logging/include/logging/: log.h
engine/resources_pool/: CMakeLists.txt  texture_manager.cpp
engine/resources_pool/include/resources_pool/: texture_manager.h
engine/ui/: CMakeLists.txt  button.cpp  command_buffer.cpp  icon.cpp
engine/ui/include/ui/: button.h  command_buffer.h  icon.h  ui.h
